--- a/Programmation-Web-1/index.html
+++ b/Programmation-Web-1/index.html
@@ -2,21 +2,126 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Programmation Web 1</title>
+  <title>Cours de Programmation Web</title>
   <link rel="stylesheet" href="../style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #005f73;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 1.2rem;
+    }
+    main {
+      max-width: 900px;
+      margin: 20px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #005f73;
+      margin-top: 30px;
+    }
+    ul {
+      margin: 10px 0 20px 20px;
+    }
+    a {
+      color: #0a9396;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+      font-size: 0.9rem;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
-  <h1>Programmation Web 1</h1>
-  <p>Ce cours introduit HTML, CSS et JavaScript pour créer des sites web dynamiques.</p>
-  
-  <nav>
+
+  <header>
+    <h1>Cours de Programmation Web</h1>
+    <p>DUT Génie Informatique - École Supérieure de Technologie de Guelmim</p>
+  </header>
+
+  <main>
+    <h2>Bienvenue !</h2>
+    <p>
+      Vous êtes sur la page d’accueil du cours de <strong>Programmation Web</strong> destiné aux étudiants 
+      de la Licence Génie Informatique à la FPT. 
+      Ce cours a été conçu pour vous fournir une compréhension solide des concepts fondamentaux 
+      du développement web, tant sur le plan théorique que pratique.
+    </p>
+    <p>
+      Vous apprendrez à maîtriser les technologies de base du web, telles que <strong>HTML5</strong> et <strong>CSS3</strong>, 
+      et à développer des sites web responsifs et interactifs. 
+      En plus des bases, ce cours vous introduira à des outils et frameworks populaires comme <strong>Bootstrap</strong>, 
+      ainsi qu’aux protocoles et outils de communication web comme <strong>HTTP, curl et Postman</strong>.
+    </p>
+
+    <h2>Objectifs du cours</h2>
+    <ul>
+      <li>Comprendre les concepts fondamentaux du web et son fonctionnement.</li>
+      <li>Maîtriser les langages de base du web : HTML5 et CSS3.</li>
+      <li>Concevoir et implémenter des sites web responsives et interactifs.</li>
+      <li>Explorer les techniques avancées en CSS et l’utilisation de frameworks comme Bootstrap.</li>
+      <li>Comprendre le protocole HTTP et utiliser des outils comme curl et Postman.</li>
+    </ul>
+
+    <h2>Contenu du cours</h2>
+    <ul>
+      <li>Introduction au web</li>
+      <li>Les bases du HTML5</li>
+      <li>Tables et Formulaires</li>
+      <li>Introduction au CSS3</li>
+      <li>Sélecteurs CSS et styles avancés</li>
+      <li>Feuilles de style externes, variables CSS, et gestion du design global</li>
+      <li>Introduction à la mise en page responsive</li>
+      <li>Introduction à Bootstrap</li>
+      <li>Introduction au protocole HTTP, curl et Postman</li>
+      <li>Projet pratique – Création d’un portfolio personnalisé</li>
+    </ul>
+
+    <h2>Ressources</h2>
     <ul>
       <li><a href="slides.html">Slides du cours</a></li>
-      <li><a href="lab.html">Travaux pratiques</a></li>
-      <li><a href="ressources/">Ressources supplémentaires</a></li>
+      <li><a href="lab.html">Labs</a></li>
     </ul>
-  </nav>
-  
-  <a href="../">← Retour à l'accueil</a>
+
+    <h2>Contact</h2>
+    <p>
+      Pour toute question ou clarification, n’hésitez pas à contacter le professeur responsable du module 
+      <strong>Tarek AIT BAHA</strong> à l’adresse : 
+      <a href="mailto:t.aitbaha@uiz.ac.ma">t.aitbaha@uiz.ac.ma</a>
+    </p>
+
+    <p><em>Bonne chance et bon apprentissage !</em></p>
+  </main>
+
+  <footer>
+    © 2025 - Cours de Programmation Web - Tarek AIT BAHA
+  </footer>
+
 </body>
 </html>
