--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Bienvenue sur mes cours</h1>
   <ul>
-    <li><a href="programmation-web-1/">Programmation Web 1</a></li>
+    <li><a href="Programmation-Web-1/">Programmation Web 1</a></li>
     <li><a href="ia-introduction/">Introduction à l’IA</a></li>
     <!-- Ajoute d’autres cours ici -->
   </ul>
