--- a/Programmation-Web-1/index.html
+++ b/Programmation-Web-1/index.html
@@ -105,7 +105,7 @@
 
     <h2>Ressources</h2>
     <ul>
-      <li><a href="slides.html">Slides du cours</a></li>
+      <li><a href="slides/">Slides du cours</a></li>
       <li><a href="lab.html">Labs</a></li>
     </ul>
 
