--- a/Programmation-Web-1/slides/index.html
+++ b/Programmation-Web-1/slides/index.html
@@ -67,8 +67,8 @@
     <h2>Contenu du cours</h2>
     <ul>
       <li><a href="introduction.html">Introduction au Web</a></li>
-      <li><a href="html.html">Bases du HTML : Bloc, Tableaux et Formulaires</a></li>
-      <li><a href="css.html">Introduction au CSS : Box Model, Flexbox et CSS Grid</a></li>
+      <li><a href="baseHTML.html">Bases du HTML : Bloc, Tableaux et Formulaires</a></li>
+      <li><a href="introCSS.html">Introduction au CSS : Box Model, Flexbox et CSS Grid</a></li>
       <li><a href="responsive.html">Responsive Design et Framework Bootstrap</a></li>
       <li><a href="http.html">Protocole HTTP</a></li>
     </ul>
