--- a/Programmation-Web-1/slides/introduction.html
+++ b/Programmation-Web-1/slides/introduction.html
@@ -2,111 +2,52 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Slides - Introduction au Web</title>
+  <title>Introduction au Web</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background: #222;
-      color: #fff;
+      text-align: center;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      color: #005f73;
+    }
+    .slide-container {
+      margin: 20px auto;
+      max-width: 960px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      border-radius: 10px;
       overflow: hidden;
     }
-    .slide {
-      display: none;
-      width: 100vw;
-      height: 100vh;
-      padding: 50px;
-      box-sizing: border-box;
-    }
-    .active {
-      display: block;
-    }
-    h1, h2, p {
-      margin: 0 0 20px;
-    }
-    .nav {
-      position: fixed;
-      bottom: 20px;
+    iframe {
       width: 100%;
-      text-align: center;
-    }
-    .nav button {
-      background: #0a9396;
+      height: 569px;
       border: none;
-      padding: 10px 20px;
-      margin: 0 10px;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      border-radius: 6px;
     }
-    .nav button:hover {
-      background: #94d2bd;
-      color: black;
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      color: #0a9396;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
+  <h1>Introduction au Web</h1>
+  <p>Slides du cours intégrés ci-dessous :</p>
 
-  <!-- Slide 1 -->
-  <div class="slide active">
-    <h1>Introduction au Web</h1>
-    <h2>Cours de Programmation Web</h2>
-    <p>Bienvenue dans la première partie du cours !</p>
+  <div class="slide-container">
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vXXXXXXX/embed?start=false&loop=false&delayms=3000"
+            allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
+    </iframe>
   </div>
 
-  <!-- Slide 2 -->
-  <div class="slide">
-    <h1>Qu’est-ce que le Web ?</h1>
-    <p>Le Web est un système d’information basé sur :</p>
-    <ul>
-      <li>Le protocole HTTP</li>
-      <li>Les navigateurs (clients)</li>
-      <li>Les serveurs web</li>
-      <li>Les ressources (pages HTML, CSS, images, etc.)</li>
-    </ul>
-  </div>
-
-  <!-- Slide 3 -->
-  <div class="slide">
-    <h1>Histoire du Web</h1>
-    <p>Inventé en 1989 par Tim Berners-Lee au CERN.</p>
-    <p>Le Web repose sur les standards du W3C et s’est rapidement imposé comme un outil universel de communication.</p>
-  </div>
-
-  <!-- Navigation -->
-  <div class="nav">
-    <button onclick="prevSlide()">← Précédent</button>
-    <button onclick="nextSlide()">Suivant →</button>
-    <a href="index.html" style="margin-left:20px; color:#fff; text-decoration:underline;">Retour au menu</a>
-  </div>
-
-  <script>
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.slide');
-
-    function showSlide(index) {
-      slides.forEach((slide, i) => {
-        slide.classList.remove('active');
-        if (i === index) slide.classList.add('active');
-      });
-    }
-
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % slides.length;
-      showSlide(currentSlide);
-    }
-
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-      showSlide(currentSlide);
-    }
-
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowRight") nextSlide();
-      if (e.key === "ArrowLeft") prevSlide();
-    });
-  </script>
-
+  <a href="index.html">← Retour au menu des slides</a>
 </body>
 </html>
