--- a/Programmation-Web-1/slides/introduction.html
+++ b/Programmation-Web-1/slides/introduction.html
@@ -43,7 +43,8 @@
   <p>Slides du cours intégrés ci-dessous :</p>
 
   <div class="slide-container">
-    <iframe src="https://docs.google.com/presentation/d/1x_nKUw0LdriaxE4MRitiD9TQ1pQ9gqMtHKodgXfvoJQ/edit?usp=sharing"
+    <iframe src="https://docs.google.com/presentation/d/e/…/embed?start=false&loop=false&delayms=3000"
+            frameborder="0" width="960" height="569"
             allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
     </iframe>
   </div>
