--- a/Programmation-Web-1/slides/introduction.html
+++ b/Programmation-Web-1/slides/introduction.html
@@ -6,10 +6,10 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
       background: #f9f9f9;
       margin: 0;
       padding: 20px;
+      text-align: center;
     }
     h1 {
       color: #005f73;
@@ -43,9 +43,11 @@
   <p>Slides du cours intégrés ci-dessous :</p>
 
   <div class="slide-container">
-    <iframe src="https://docs.google.com/presentation/d/e/…/embed?start=false&loop=false&delayms=3000"
-            frameborder="0" width="960" height="569"
-            allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">
+    <iframe
+      src="https://docs.google.com/presentation/d/e/2PACX-1v…/embed?start=false&loop=false&delayms=3000"
+      allowfullscreen="true"
+      mozallowfullscreen="true"
+      webkitallowfullscreen="true">
     </iframe>
   </div>
 
