--- a/Programmation-Web-1/slides/introduction.html
+++ b/Programmation-Web-1/slides/introduction.html
@@ -43,12 +43,7 @@
   <p>Slides du cours intégrés ci-dessous :</p>
 
   <div class="slide-container">
-    <iframe
-      src="https://docs.google.com/presentation/d/e/2PACX-1vSCvMpuRxRu2o38YlGlpVr4a0muMpiSY_LBdQK7WzgnpDsy5_5f63cfSR7IHCkM7yZLNz7HdTo8XtTc/pubembed?start=false&loop=false&delayms=3000"
-      allowfullscreen="true"
-      mozallowfullscreen="true"
-      webkitallowfullscreen="true">
-    </iframe>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSCvMpuRxRu2o38YlGlpVr4a0muMpiSY_LBdQK7WzgnpDsy5_5f63cfSR7IHCkM7yZLNz7HdTo8XtTc/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </div>
 
   <a href="index.html">← Retour au menu des slides</a>
