--- a/Programmation-Web-1/index.html
+++ b/Programmation-Web-1/index.html
@@ -68,8 +68,8 @@
   <main>
     <h2>Bienvenue !</h2>
     <p>
-      Vous êtes sur la page d’accueil du cours de <strong>Programmation Web</strong> destiné aux étudiants 
-      de la Licence Génie Informatique à la FPT. 
+      Vous êtes sur la page d’accueil du cours de <strong>Technologies Web</strong> destiné aux étudiants 
+      de DUT à la EST de Guelmim. 
       Ce cours a été conçu pour vous fournir une compréhension solide des concepts fondamentaux 
       du développement web, tant sur le plan théorique que pratique.
     </p>
